--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "style-loader": "^0.13.1",
     "susy": "^2.2.12",
     "webpack": "^1.13.1"
+  },
+  "dependencies": {
+    "breakpoint-sass": "^2.7.0"
   }
 }
